--- a/index.html
+++ b/index.html
@@ -101,15 +101,14 @@
             </div>
           </div>
           <!----Chat container-->
-          <div class="ml-4 mr-9 w-full flex flex-col justify-between pb-24">
-            <div>
-              <div class="chat-messages" id="chat-messages">
-              </div>
+          <div class="ml-4 mr-4 w-full flex flex-col justify-between">
+            <div class="p-10">
+              <div class="chat-messages" id="chat-messages"></div>
               <div class="chat-input">
-                  <div>
+                  <div class="w-full">
                     <input type="text" id="message-input" placeholder="Type a message...">
                   </div>
-                  <button class="pt-6" onclick="sendMessage()">Send</button>
+                  <button class="px-6 py-2 ml-4 text-white rounded-md bg-purple-500" onclick="sendMessage()">Send</button>
               </div>
           </div>
           </div>
