--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </div>
           <!----Chat container-->
           <div class="ml-4 mr-4 w-full flex flex-col justify-between">
-            <div class="p-10">
+            <div class="p-10 border-2">
               <div class="chat-messages" id="chat-messages"></div>
               <div class="chat-input">
                   <div class="w-full">
