--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </div>
           <div class="flex gap-2 justify-center">
             <img
-              class="w-7 h-7 border-2 rounded-full object-cover"
+              class="w-7 h-7 border-2 rounded-full object-cover hidden sm:block md:block"
               src="https://i.ibb.co/fDDyFwW/rsz-1sabbir.jpg"
               alt="sabbir"
             />
@@ -60,10 +60,10 @@
               >
             </p>
           </div>
-        </div>
+        </div> 
         <div class="w-full h-full flex">
           <div
-            class="w-auto bg-gray-200 border-b-2 border-gray-300 flex flex-col"
+            class="w-auto bg-gray-200 border-b-2 border-gray-300  flex-col hidden sm:block md:block"
           >
             <div
               class="bg-purple-200 border-b-2 border-purple-300 text-purple-600 flex pt-1"
