--- a/index.html
+++ b/index.html
@@ -111,9 +111,15 @@
                     type="text"
                     id="message-input"
                     placeholder="Type a message..."
-                    onkeypress=""
+                    class="w-full pl-9 py-2 rounded-md border border-gray-300 focus:outline-none focus:border-purple-500"
+                  />
+                  <img
+                    src="https://www.gstatic.com/images/icons/material/system/1x/attach_file_black_24dp.png"
+                    alt="Attach File"
+                    class="absolute bottom-11 pl-2"
                   />
                 </div>
+                
                 <button
                   class="px-3 py-2 ml-4 text-white rounded-md bg-purple-500 flex gap-1"
                   onclick="sendMessage()"
